my-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: my-app
