my-app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - my-app-demo.dev.insee.io
  rules:
    - host: my-app-demo.dev.insee.io
      http:
        paths:
          - path: /
            backend:
              serviceName: my-app
              servicePort: http
